--- a/header.html
+++ b/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
         <style>
             .container
             .row {
