--- a/rekomendasi.html
+++ b/rekomendasi.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+        <link rel="stylesheet2"href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
         <style>
+            input[type=button]{
+    background-color: #41B3D3;
+    border: none;
+    color:#FFFFFF;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-family:'Comfortaa';
+}
             .container
             .row {
     --bs-gutter-x: 1.5rem;
@@ -93,6 +105,32 @@
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Reservasi </p></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Login</p></div>
         </div>
+
     </div>
         
     </head>
+    <body><br><br>
+    <div class="row">
+    <img src="img/hotel.jpg"style="margin:0px 0px;width:300px;height:200px">
+    <img src="img/hotel2.jpg"style="margin:0px 180px;width:300px;height:200px">
+    <img src="img/hotel3.jpg"style="margin:0px 25px;width:300px;height:200px"></div>
+    <div class="row">
+        <div class="text-left">
+    <input type="button" id="book1"value="Book Now!"></div>
+    <div class="text-center">
+    <input type="button" id="book2"value="Book Now!"></div>
+    <div class="text-right">
+    <input type="button" id="book3"value="Book Now!"></div>
+    </div>
+</div>
+    <img src="img/hotel4.jpg"style="margin:0px 0px;width:300px;height:200px">
+    <img src="img/hotel5.jpg"style="margin:0px 180px;width:300px;height:200px">
+    <img src="img/hotel6.jpg"style="margin:0px 25px;width:300px;height:200px"><br></div>
+    <div class="row">
+        <span>
+    <input type="button" id="book4"value="Book Now!">
+    <input type="button" id="book5"value="Book Now!">
+    <input type="button" id="book6"value="Book Now!">
+</span>
+    </div>
+    </body>
