--- a/rekomendasi.html
+++ b/rekomendasi.html
@@ -32,6 +32,15 @@
   padding-left: calc(var(--bs-gutter-x) * .5);
   margin-top: var(--bs-gutter-y);
 }
+.text-left{
+  text-align: left;
+}
+.text-center{
+  text-align:center;
+}
+.text-right{
+  text-align: right;
+}
   @media (min-width: 576px) {
   .col-sm-auto {
     flex: 0 0 auto;
@@ -96,6 +105,213 @@
     flex: 0 0 auto;
     width: 100%;
   }
+}@media (min-width: 1400px) {
+  .col-xxl {
+    flex: 1 0 0%;
+  }
+
+  .row-cols-xxl-auto > * {
+    flex: 0 0 auto;
+    width: auto;
+  }
+
+  .row-cols-xxl-1 > * {
+    flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .row-cols-xxl-2 > * {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .row-cols-xxl-3 > * {
+    flex: 0 0 auto;
+    width: 33.3333333333%;
+  }
+
+  .row-cols-xxl-4 > * {
+    flex: 0 0 auto;
+    width: 25%;
+  }
+
+  .row-cols-xxl-5 > * {
+    flex: 0 0 auto;
+    width: 20%;
+  }
+
+  .row-cols-xxl-6 > * {
+    flex: 0 0 auto;
+    width: 16.6666666667%;
+  }
+}
+.col-auto {
+  flex: 0 0 auto;
+  width: auto;
+}
+
+.col-1 {
+  flex: 0 0 auto;
+  width: 8.33333333%;
+}
+
+.col-2 {
+  flex: 0 0 auto;
+  width: 16.66666667%;
+}
+
+.col-3 {
+  flex: 0 0 auto;
+  width: 25%;
+}
+
+.col-4 {
+  flex: 0 0 auto;
+  width: 33.33333333%;
+}
+
+.col-5 {
+  flex: 0 0 auto;
+  width: 41.66666667%;
+}
+
+.col-6 {
+  flex: 0 0 auto;
+  width: 50%;
+}
+
+.col-7 {
+  flex: 0 0 auto;
+  width: 58.33333333%;
+}
+
+.col-8 {
+  flex: 0 0 auto;
+  width: 66.66666667%;
+}
+
+.col-9 {
+  flex: 0 0 auto;
+  width: 75%;
+}
+
+.col-10 {
+  flex: 0 0 auto;
+  width: 83.33333333%;
+}
+
+.col-11 {
+  flex: 0 0 auto;
+  width: 91.66666667%;
+}
+
+.col-12 {
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.offset-1 {
+  margin-left: 8.33333333%;
+}
+
+.offset-2 {
+  margin-left: 16.66666667%;
+}
+
+.offset-3 {
+  margin-left: 25%;
+}
+
+.offset-4 {
+  margin-left: 33.33333333%;
+}
+
+.offset-5 {
+  margin-left: 41.66666667%;
+}
+
+.offset-6 {
+  margin-left: 50%;
+}
+
+.offset-7 {
+  margin-left: 58.33333333%;
+}
+
+.offset-8 {
+  margin-left: 66.66666667%;
+}
+
+.offset-9 {
+  margin-left: 75%;
+}
+
+.offset-10 {
+  margin-left: 83.33333333%;
+}
+
+.offset-11 {
+  margin-left: 91.66666667%;
+}
+
+.g-0,
+.gx-0 {
+  --bs-gutter-x: 0;
+}
+
+.g-0,
+.gy-0 {
+  --bs-gutter-y: 0;
+}
+
+.g-1,
+.gx-1 {
+  --bs-gutter-x: 0.25rem;
+}
+
+.g-1,
+.gy-1 {
+  --bs-gutter-y: 0.25rem;
+}
+
+.g-2,
+.gx-2 {
+  --bs-gutter-x: 0.5rem;
+}
+
+.g-2,
+.gy-2 {
+  --bs-gutter-y: 0.5rem;
+}
+
+.g-3,
+.gx-3 {
+  --bs-gutter-x: 1rem;
+}
+
+.g-3,
+.gy-3 {
+  --bs-gutter-y: 1rem;
+}
+
+.g-4,
+.gx-4 {
+  --bs-gutter-x: 1.5rem;
+}
+
+.g-4,
+.gy-4 {
+  --bs-gutter-y: 1.5rem;
+}
+
+.g-5,
+.gx-5 {
+  --bs-gutter-x: 3rem;
+}
+
+.g-5,
+.gy-5 {
+  --bs-gutter-y: 3rem;
 }
         </style>
         <div class="container">
@@ -106,7 +322,7 @@
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Login</p></div>
         </div>
 
-    </div>
+   
         
     </head>
     <body><br><br>
@@ -115,22 +331,25 @@
     <img src="img/hotel2.jpg"style="margin:0px 180px;width:300px;height:200px">
     <img src="img/hotel3.jpg"style="margin:0px 25px;width:300px;height:200px"></div>
     <div class="row">
-        <div class="text-left">
+        <div class="col-4 text-left">
     <input type="button" id="book1"value="Book Now!"></div>
-    <div class="text-center">
+    <div class="col-4 text-center">
     <input type="button" id="book2"value="Book Now!"></div>
-    <div class="text-right">
+    <div class="col-4 text-right">
     <input type="button" id="book3"value="Book Now!"></div>
     </div>
-</div>
+
     <img src="img/hotel4.jpg"style="margin:0px 0px;width:300px;height:200px">
     <img src="img/hotel5.jpg"style="margin:0px 180px;width:300px;height:200px">
-    <img src="img/hotel6.jpg"style="margin:0px 25px;width:300px;height:200px"><br></div>
+    <img src="img/hotel6.jpg"style="margin:0px 25px;width:300px;height:200px"><br>
     <div class="row">
-        <span>
-    <input type="button" id="book4"value="Book Now!">
-    <input type="button" id="book5"value="Book Now!">
-    <input type="button" id="book6"value="Book Now!">
-</span>
-    </div>
+      <div class="col-4 text-left">
+    <input type="button" id="book4"value="Book Now!"></div>
+    <div class="col-4 text-center">
+    <input type="button" id="book5"value="Book Now!"></div>
+    <div class="col-4 text-right"> 
+    <input type="button" id="book6"value="Book Now!"></div>
+
+    
+  </div>
     </body>
