--- a/rekomendasi.html
+++ b/rekomendasi.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-        <link rel="stylesheet2"href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
         <style>
             input[type=button]{
     background-color: #41B3D3;
@@ -316,7 +315,7 @@
         </style>
         <div class="container">
         <div class="row"style="background-color:black">
-            <div class="col-sm-4"><img src="logoterang.png"></div>
+            <div class="col-sm-4"><img src="img/logoterang.png"></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Beranda</p></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Reservasi </p></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Login</p></div>
