--- a/header.html
+++ b/header.html
@@ -89,7 +89,7 @@
         </style>
         <div class="container">
         <div class="row"style="background-color:black">
-            <div class="col-sm-4"><img src="logoterang.png"></div>
+            <div class="col-sm-4"><img src="img/logoterang.png"></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Beranda</p></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Reservasi </p></div>
                 <div class="col-sm-3"><p style="color:#FFD700;font-family:'Comfortaa';font-size:36px;text-align: center;">Login</p></div>
